mux-compiler/tests/snapshots/lexer_integration__file_lexer__modglobal_a.snap
---
source: mux-compiler/tests/lexer_integration.rs
expression: tokens
---
[
    Token {
        token_type: LineComment(
            "Paired with modglobal_b.mux: both declare the same global names on purpose,",
        ),
        span: Span {
            row_start: 1,
            row_end: Some(
                1,
            ),
            col_start: 1,
            col_end: Some(
                79,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 1,
            row_end: None,
            col_start: 79,
            col_end: None,
        },
    },
    Token {
        token_type: LineComment(
            "so test_module_global_scoping.mux can prove they no longer collide.",
        ),
        span: Span {
            row_start: 2,
            row_end: Some(
                2,
            ),
            col_start: 1,
            col_end: Some(
                71,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 2,
            row_end: None,
            col_start: 71,
            col_end: None,
        },
    },
    Token {
        token_type: Const,
        span: Span {
            row_start: 3,
            row_end: Some(
                3,
            ),
            col_start: 1,
            col_end: Some(
                6,
            ),
        },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span {
            row_start: 3,
            row_end: Some(
                3,
            ),
            col_start: 7,
            col_end: Some(
                10,
            ),
        },
    },
    Token {
        token_type: Id(
            "SHARED",
        ),
        span: Span {
            row_start: 3,
            row_end: Some(
                3,
            ),
            col_start: 11,
            col_end: Some(
                17,
            ),
        },
    },
    Token {
        token_type: Eq,
        span: Span {
            row_start: 3,
            row_end: Some(
                3,
            ),
            col_start: 18,
            col_end: Some(
                19,
            ),
        },
    },
    Token {
        token_type: Int(
            111,
        ),
        span: Span {
            row_start: 3,
            row_end: Some(
                3,
            ),
            col_start: 20,
            col_end: Some(
                23,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 3,
            row_end: None,
            col_start: 23,
            col_end: None,
        },
    },
    Token {
        token_type: Const,
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 1,
            col_end: Some(
                6,
            ),
        },
    },
    Token {
        token_type: Id(
            "string",
        ),
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 7,
            col_end: Some(
                13,
            ),
        },
    },
    Token {
        token_type: Id(
            "LABEL",
        ),
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 14,
            col_end: Some(
                19,
            ),
        },
    },
    Token {
        token_type: Eq,
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 20,
            col_end: Some(
                21,
            ),
        },
    },
    Token {
        token_type: Str(
            "alpha",
        ),
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 22,
            col_end: Some(
                29,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 4,
            row_end: None,
            col_start: 29,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 5,
            row_end: None,
            col_start: 1,
            col_end: None,
        },
    },
    Token {
        token_type: Func,
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 1,
            col_end: Some(
                5,
            ),
        },
    },
    Token {
        token_type: Id(
            "a_shared",
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 6,
            col_end: Some(
                14,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 14,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 15,
            col_end: None,
        },
    },
    Token {
        token_type: Returns,
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 17,
            col_end: Some(
                24,
            ),
        },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 25,
            col_end: Some(
                28,
            ),
        },
    },
    Token {
        token_type: OpenBrace,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 29,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 30,
            col_end: None,
        },
    },
    Token {
        token_type: Return,
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 5,
            col_end: Some(
                11,
            ),
        },
    },
    Token {
        token_type: Id(
            "SHARED",
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 12,
            col_end: Some(
                18,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 18,
            col_end: None,
        },
    },
    Token {
        token_type: CloseBrace,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 1,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 2,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 9,
            row_end: None,
            col_start: 1,
            col_end: None,
        },
    },
    Token {
        token_type: Func,
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 1,
            col_end: Some(
                5,
            ),
        },
    },
    Token {
        token_type: Id(
            "a_label",
        ),
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 6,
            col_end: Some(
                13,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 13,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 14,
            col_end: None,
        },
    },
    Token {
        token_type: Returns,
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 16,
            col_end: Some(
                23,
            ),
        },
    },
    Token {
        token_type: Id(
            "string",
        ),
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 24,
            col_end: Some(
                30,
            ),
        },
    },
    Token {
        token_type: OpenBrace,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 31,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 32,
            col_end: None,
        },
    },
    Token {
        token_type: Return,
        span: Span {
            row_start: 11,
            row_end: Some(
                11,
            ),
            col_start: 5,
            col_end: Some(
                11,
            ),
        },
    },
    Token {
        token_type: Id(
            "LABEL",
        ),
        span: Span {
            row_start: 11,
            row_end: Some(
                11,
            ),
            col_start: 12,
            col_end: Some(
                17,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 11,
            row_end: None,
            col_start: 17,
            col_end: None,
        },
    },
    Token {
        token_type: CloseBrace,
        span: Span {
            row_start: 12,
            row_end: None,
            col_start: 1,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 12,
            row_end: None,
            col_start: 2,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 13,
            row_end: None,
            col_start: 1,
            col_end: None,
        },
    },
]
